--- a/app/views/generos/show.html.erb
+++ b/app/views/generos/show.html.erb
@@ -5,6 +5,13 @@
   <%= @genero.nome %>
 </p>
 
+<p>
+  <b>Programas com esse gênero:</b>
+  <% @genero.programas.each do |programa| %>
+  	<p><%= link_to programa.nome, programa_path(programa) %></p>
+  <% end %>
+</p>
+
 
 <%= link_to 'Edit', edit_genero_path(@genero) %> |
 <%= link_to 'Back', generos_path %>
