--- a/app/views/gerar_arff/gerar.html.erb
+++ b/app/views/gerar_arff/gerar.html.erb
@@ -1,2 +1,9 @@
-<h1>GerarArff#gerar</h1>
-<p>Find me in app/views/gerar_arff/gerar.html.erb</p>
+@relation interacoes<br /><br />
+
+<% if params[:programa] %>
+  <% Programa.columns.select {|c| params[:programa].include?(c.name)}.each do |c| %>
+    @attribute <%= c.name %> <%= normalize_arff_type c.type %><br />
+  <% end %>
+<% end %>
+<br /><br />
+@data
