--- a/app/views/gerar_arff/gerar.html.erb
+++ b/app/views/gerar_arff/gerar.html.erb
@@ -26,6 +26,8 @@
   <% end %>
 <% end %>
 <br /><br />
-@data
-
-<%= @result %>
+@data<br />
+<% @result.each do |r| %>
+    <%= r.join(',') %>
+  <br />
+<% end %>
