--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,4 +4,5 @@
   <li>Click <a href="/rules.xsd">here</a> to download the XML Template file (XSD)</li>
   <li>Click <a href="/xml_example.xml">here</a> to download a XML example file</li>
   <li>Click <%=link_to 'here',interacoes_path %> to view all records saved</li>
+  <li>To generate a custom ARFF file, click <%=link_to 'here',gerar_arff_index_path %></li>
 </ul>
